WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63919
WebKitGtk+ fails to build on win32 against GTK3
https://bugs.webkit.org/show_bug.cgi?id=63919
Summary
WebKitGtk+ fails to build on win32 against GTK3
Greg Hellings
Reported
2011-07-04 16:07:32 PDT
I am attempting to build webkit-1.4.2 against GTK3 cross-compiling from Fedora Core 15 with the mingw32 toolchain. After fixing a bug with the gtk3 missing gdk/win32 headers, I am attempting to compile webkitgtk against gtk3. Compile fails with the following message: CXX Source/WebCore/plugins/gtk/libwebkitgtk_3_0_la-PluginViewGtk.lo Source/WebCore/plugins/gtk/PluginViewGtk.cpp: In member function 'bool WebCore::PluginView::platformStart()': Source/WebCore/plugins/gtk/PluginViewGtk.cpp:834:42: error: 'gtk_socket_new' was not declared in this scope GtkSocket is not available with the gdk/win32 backend, only with X11.
Attachments
Don't use gtk_socket_new
(696 bytes, patch)
2011-07-29 04:50 PDT
,
Mikkel Kruse Johnsen
no flags
Details
Formatted Diff
Diff
Updated patch with changelog entry
(1.26 KB, patch)
2012-03-08 10:02 PST
,
tuxator
no flags
Details
Formatted Diff
Diff
Updated patch with changelog entry
(1.24 KB, patch)
2012-03-08 10:21 PST
,
tuxator
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mikkel Kruse Johnsen
Comment 1
2011-07-29 04:50:54 PDT
Created
attachment 102346
[details]
Don't use gtk_socket_new Don't use gtk_socket_new if using GDK_WINDOWING_WIN32 and GTK3, since GtkSocket is X11 only in Gtk3 Not sure it will work, but it compiles.
Kalev Lember
Comment 2
2011-08-31 01:14:51 PDT
If you want to get the patch included, should format it with svn-create-patch as described in
http://www.webkit.org/coding/contributing.html
and raise the review? flag.
Gustavo Noronha (kov)
Comment 3
2012-03-06 04:44:15 PST
Comment on
attachment 102346
[details]
Don't use gtk_socket_new View in context:
https://bugs.webkit.org/attachment.cgi?id=102346&action=review
> webkit-1.4.2/Source/WebCore/plugins/gtk/PluginViewGtk.cpp:830 > +#if defined(GDK_WINDOWING_WIN32) && !defined(GTK_API_VERSION_2) > + setPlatformWidget(0);
This should be #if PLATFORM(WINDOWS) instead of GDK_WINDOWING_WIN32, I think. 1.4.2 is very old, but this patch seems to be still necessary. It needs to be fixed to build on master, and have a ChangeLog entry like kalev mentioned.
tuxator
Comment 4
2012-03-08 10:02:18 PST
Created
attachment 130835
[details]
Updated patch with changelog entry
WebKit Review Bot
Comment 5
2012-03-08 10:04:20 PST
Attachment 130835
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
tuxator
Comment 6
2012-03-08 10:21:06 PST
Created
attachment 130841
[details]
Updated patch with changelog entry
WebKit Review Bot
Comment 7
2012-03-08 11:15:23 PST
Comment on
attachment 130841
[details]
Updated patch with changelog entry Clearing flags on attachment: 130841 Committed
r110178
: <
http://trac.webkit.org/changeset/110178
>
WebKit Review Bot
Comment 8
2012-03-08 11:15:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug