WebKitGtk+ fails to build on win32 against GTK3 https://bugs.webkit.org/show_bug.cgi?id=63919

Patch by Mikkel Kruse Johnsen <mikkel@linet.dk> on 2012-03-08
Reviewed by Gustavo Noronha Silva.

* plugins/gtk/PluginViewGtk.cpp: Don't use gtk_socket_new with GTK3 on Win32
(WebCore::PluginView::platformStart):

Canonical link: https://commits.webkit.org/97783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110178 268f45cc-cd09-0410-ab3c-d52691b4dbfc